--- a/index.html
+++ b/index.html
@@ -446,21 +446,23 @@
             <div id="envelope-text">
                 <h3>Dear L,</h3>
 
-                <p>Happy Birthday!!! I am genuinely grateful that you were born into this world. In a sea of people coming and going, I count myself so lucky that our paths crossed. You might not realize it, but you have this incredible sense of humor and a kind of "mysterious energy" on you lol.</p>
+                <p>First of all, Happy Birthday~ Hope u r doing good and sleeping well.</p>
 
-                <p>Though, you really do sleep <i>a lot</i>. I guess that’s just the universe giving you a "nerf" (debuff)—otherwise, you’d be too powerful (is that what they call "IMBA" in Russian?).</p>
+                <p>I am genuinely grateful that you were born into this world. In a sea of people coming and going, I count myself so lucky that our paths crossed. You might not realize it, but you have this incredible sense of humor and a kind of "mysterious energy" on you lol. Though, you really do sleep <i>a lot</i>. Guess that’s just the universe giving you a debuff — otherwise, you’d be too powerful (is that what they call "IMBA" in Russian?).</p>
     
-                <p>I sincerely hope your life is filled with happiness and that you are always surrounded by positive, loving Family and friends who truly care about you and share these beautiful years of time and youth with you.</p>
+                <p>Moreover, I sincerely hope your life is filled with happiness and that you are always surrounded by positive, loving Family and friends who truly care about you and share these beautiful years of time and youth with you.</p>
 
                 <p>You once told me you never celebrate your birthday, and honestly, that made me feel a little sad—it felt kind of lonely and such a pity. But hearing that your friends are celebrating with you this year makes me so happy.</p>
     
                 <p>Anyway, I practiced a birthday song! Please don't judge my skills too hard; I picked a simple one, haha.</p>
 
-                <p>I wish you all the best. Even though we are miles apart, you will always hold a special place in my heart.</p>
+                <p>Lastly, wish you all the best. Hope you find joy in the little things, strength in tough times, and love everywhere you go. Even though we are miles apart, you will always hold a special place in my heart.</p>
+
+                <p>Here is a little memory of us that I cherish forever:</p>
 
                 <div class="photo-container">
                     <img src="assets/us.jpg" class="letter-photo" alt="Us">
-                    <div class="photo-caption">Best Team Forever (i miss BinBong)</div>
+                    <div class="photo-caption">A top-tier team that has never reached the top(i miss BinBong)</div>
                 </div>
 
                 <p>Since I’m so far away, I can only send you this virtual gift and cake for now. But I promise, next time we meet, I'm buying you a real slice of cake lol.</p>
