--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
                 <p>Since I’m so far away, I can only send you this virtual gift and cake for now. But I promise, next time we meet, I'm buying you a real slice of cake lol.</p>
     
                 <p>I miss you,<br>Hiroto</p>
+                <p>(click the X button on the top right corner of the letter to exit)</p>
             </div>
         </div>
     </div>
